freest/test/prog/Invalid/SessionTypes/UnendedSession/UnendedSession.fst
module SkipChannel where

main : (Skip, Skip)
main = channel @Skip
